// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals ChartHeader Component renders correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
  >
    <Heading
      as="h6"
      className="Title"
    >
      Foo
       – Feb 15 2018
    </Heading>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders padding correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
  >
    <Heading
      as="h6"
      className="Title"
    >
      Foo
       – Feb 15 2018
    </Heading>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders primaryArea correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
  >
    <Heading
      as="h6"
      className="Title"
    >
      Foo
       – Feb 15 2018
    </Heading>
    <div
      className="PrimaryArea"
    >
      <div>
        react
      </div>
    </div>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders tooltip content correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
  >
    <Heading
      as="h6"
      className="Title"
    >
      Foo
       – Feb 15 2018
    </Heading>
    <InfoTooltip
      content="tooltip content"
      size={17}
    />
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders without date 1`] = `
<Fragment>
  <div
    className="ChartHeader"
  >
    <Heading
      as="h6"
      className="Title"
    >
      Foo
    </Heading>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;
